[gd_scene load_steps=9 format=3 uid="uid://c1o0c8lys5c6t"]

[ext_resource type="Theme" uid="uid://clhad2uurm8i7" path="res://assets/UI_Theme.tres" id="1_c7y5k"]
[ext_resource type="Script" uid="uid://dy6o4k38ib6bg" path="res://scr/UI/ui_manage_equipment.gd" id="2_3j5ax"]
[ext_resource type="Texture2D" uid="uid://ek5yx2s3pa8c" path="res://assets/Menu Buttons/Menu Buttons sprite (BnW).png" id="3_1ahgj"]
[ext_resource type="Script" uid="uid://db3ygexy6j7h6" path="res://scr/UI/equipment_list.gd" id="4_5jsf5"]
[ext_resource type="Script" uid="uid://dnfwc4e6khpev" path="res://scr/UI/equipment_test.gd" id="5_ab4o6"]
[ext_resource type="Script" uid="uid://diaxfupp0552y" path="res://scr/UI/equipment_manage.gd" id="6_ej0fr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jl0x0"]
texture = ExtResource("3_1ahgj")
texture_margin_top = 9.63859
region_rect = Rect2(818.133, 833.217, 201.254, 200.868)

[sub_resource type="Theme" id="Theme_2eruf"]
Button/styles/normal = SubResource("StyleBoxTexture_jl0x0")

[node name="ui_manage_equipment" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c7y5k")
script = ExtResource("2_3j5ax")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBC" type="VBoxContainer" parent="MC"]
custom_minimum_size = Vector2(404, 422)
layout_mode = 2
theme_override_constants/separation = 9

[node name="Exit" type="MarginContainer" parent="MC/VBC"]
custom_minimum_size = Vector2(162, 142)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 74

[node name="Exit_Button" type="Button" parent="MC/VBC/Exit"]
custom_minimum_size = Vector2(102, 102)
layout_mode = 2
theme = SubResource("Theme_2eruf")
theme_override_font_sizes/font_size = 36

[node name="equipment_status" type="MarginContainer" parent="MC/VBC"]
layout_mode = 2

[node name="HBC" type="HBoxContainer" parent="MC/VBC/equipment_status"]
custom_minimum_size = Vector2(735, 49)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="item_id" type="PanelContainer" parent="MC/VBC/equipment_status/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_status/HBC/item_id"]
layout_mode = 2
text = "裝備代號"
horizontal_alignment = 1

[node name="item_name" type="PanelContainer" parent="MC/VBC/equipment_status/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_status/HBC/item_name"]
layout_mode = 2
text = "裝備名稱"
horizontal_alignment = 1

[node name="item_level" type="PanelContainer" parent="MC/VBC/equipment_status/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_status/HBC/item_level"]
layout_mode = 2
text = "裝備等級"
horizontal_alignment = 1

[node name="item_attack_defense" type="PanelContainer" parent="MC/VBC/equipment_status/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_status/HBC/item_attack_defense"]
layout_mode = 2
text = "物理防禦"
horizontal_alignment = 1

[node name="item_magic_defense" type="PanelContainer" parent="MC/VBC/equipment_status/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_status/HBC/item_magic_defense"]
layout_mode = 2
text = "魔法防禦"
horizontal_alignment = 1

[node name="equipment_list" type="MarginContainer" parent="MC/VBC"]
custom_minimum_size = Vector2(1115, 344)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 100

[node name="equipment_list" type="VBoxContainer" parent="MC/VBC/equipment_list"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("4_5jsf5")

[node name="equipment_test" type="MarginContainer" parent="MC/VBC/equipment_list/equipment_list"]
layout_mode = 2
script = ExtResource("5_ab4o6")

[node name="HBC" type="HBoxContainer" parent="MC/VBC/equipment_list/equipment_list/equipment_test"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="equipment_id" type="PanelContainer" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC/equipment_id"]
layout_mode = 2
text = "E000001"
horizontal_alignment = 1

[node name="equipment_name" type="PanelContainer" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC/equipment_name"]
layout_mode = 2
text = "軍團聖盾"
horizontal_alignment = 1

[node name="equipment_level" type="PanelContainer" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC/equipment_level"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="equipment_attack_defence" type="PanelContainer" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC/equipment_attack_defence"]
layout_mode = 2
text = "30"
horizontal_alignment = 1

[node name="equipment_magic_defence" type="PanelContainer" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC/equipment_magic_defence"]
layout_mode = 2
text = "30"
horizontal_alignment = 1

[node name="equipment_delete" type="MarginContainer" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC"]
custom_minimum_size = Vector2(80, 49)
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="equipment_delete_btn" type="Button" parent="MC/VBC/equipment_list/equipment_list/equipment_test/HBC/equipment_delete"]
custom_minimum_size = Vector2(80, 49)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "刪除"

[node name="switch_pages" type="MarginContainer" parent="MC/VBC"]
layout_mode = 2
theme_override_constants/margin_top = 49

[node name="HBC" type="HBoxContainer" parent="MC/VBC/switch_pages"]
custom_minimum_size = Vector2(463, 49)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 53

[node name="previous_page" type="MarginContainer" parent="MC/VBC/switch_pages/HBC"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2

[node name="previous_page_btn" type="Button" parent="MC/VBC/switch_pages/HBC/previous_page"]
layout_mode = 2
text = "上一頁"

[node name="equipment_search" type="MarginContainer" parent="MC/VBC/switch_pages/HBC"]
custom_minimum_size = Vector2(220, 49)
layout_mode = 2
size_flags_horizontal = 4

[node name="equipment_search" type="LineEdit" parent="MC/VBC/switch_pages/HBC/equipment_search"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "搜尋裝備名稱"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="next_page" type="MarginContainer" parent="MC/VBC/switch_pages/HBC"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2

[node name="next_page_btn" type="Button" parent="MC/VBC/switch_pages/HBC/next_page"]
layout_mode = 2
text = "下一頁"

[node name="equipment_manage" type="MarginContainer" parent="MC/VBC"]
custom_minimum_size = Vector2(735, 49)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 245
theme_override_constants/margin_top = 30
script = ExtResource("6_ej0fr")

[node name="HBC" type="HBoxContainer" parent="MC/VBC/equipment_manage"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="equipment_id" type="MarginContainer" parent="MC/VBC/equipment_manage/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MC/VBC/equipment_manage/HBC/equipment_id"]
layout_mode = 2
placeholder_text = "裝備代號"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="equipment_name" type="MarginContainer" parent="MC/VBC/equipment_manage/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MC/VBC/equipment_manage/HBC/equipment_name"]
layout_mode = 2
placeholder_text = "裝備名稱"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="equipment_level" type="MarginContainer" parent="MC/VBC/equipment_manage/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MC/VBC/equipment_manage/HBC/equipment_level"]
layout_mode = 2
placeholder_text = "裝備等級"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="equipment_attack_defence" type="MarginContainer" parent="MC/VBC/equipment_manage/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MC/VBC/equipment_manage/HBC/equipment_attack_defence"]
layout_mode = 2
placeholder_text = "物理防禦"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="equipment_magic_defence" type="MarginContainer" parent="MC/VBC/equipment_manage/HBC"]
custom_minimum_size = Vector2(183.75, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MC/VBC/equipment_manage/HBC/equipment_magic_defence"]
layout_mode = 2
placeholder_text = "魔法防禦"
alignment = 1
keep_editing_on_text_submit = true
expand_to_text_length = true

[node name="equipment_manage" type="MarginContainer" parent="MC/VBC/equipment_manage/HBC"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme_override_constants/margin_left = 19

[node name="equipment_manage_btn" type="Button" parent="MC/VBC/equipment_manage/HBC/equipment_manage"]
custom_minimum_size = Vector2(225, 49)
layout_mode = 2
text = "新增 / 編輯裝備"

[connection signal="pressed" from="MC/VBC/switch_pages/HBC/previous_page/previous_page_btn" to="." method="_on_previous_page_btn_pressed"]
[connection signal="text_submitted" from="MC/VBC/switch_pages/HBC/equipment_search/equipment_search" to="." method="_on_equipment_search_text_submitted"]
[connection signal="pressed" from="MC/VBC/switch_pages/HBC/next_page/next_page_btn" to="." method="_on_next_page_btn_pressed"]
[connection signal="pressed" from="MC/VBC/equipment_manage/HBC/equipment_manage/equipment_manage_btn" to="." method="_on_equipment_manage_btn_pressed"]
[connection signal="pressed" from="MC/VBC/equipment_manage/HBC/equipment_manage/equipment_manage_btn" to="MC/VBC/equipment_manage" method="_on_equipment_manage_btn_pressed"]
